# winsaf-contracts

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SETUP_GITHUB.md  deployment-testnet.json  rust-toolchain.toml
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_vulnerability.yml
.github/workflows/: ci.yml
contracts/: .gitkeep
contracts/winsaf/: Cargo.toml
contracts/winsaf/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  verify.rs
docs/: DEPLOYMENT.md
scripts/: deploy.sh  optimize.sh  schema.sh
